--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "chart.js": "^4.4.4",
+    "dotenv": "^16.4.5",
     "react-chartjs-2": "^5.2.0",
     "react-wheel-of-prizes": "^1.1.0"
   }
