--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
@@ -12,6 +13,7 @@
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "proxy": "http://localhost:3000"
   }
 }
