--- a/vh_frontend/package.json
+++ b/vh_frontend/package.json
@@ -10,10 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-charts-react": "^10.2.0",
     "canvasjs": "^1.8.3",
+    "cookies": "^0.9.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-spin-to-wheel": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
